# iMarker_detector_standalone

./: .gitignore  .gitmodules  LICENSE  NOTICE  README.md  config.py  main.py  mainIDS.py  mainOffline.py  mainOffline_image.py  mainOffline_video.py  mainRS.py  mainUSB.py  mainUsbMono.py  pyproject.toml  requirements.txt  setup.py
config/: README.md  config.yaml
outputs/: README.md
src/: __init__.py  dualvision_ids.py  dualvision_usb.py  mainDouble.py  mainIDS.py  mainOffline_image.py  mainOffline_video.py  mainRS.py  mainUSB.py  mainUsbMono.py  runner_ids.py  runner_offImg.py  runner_offImg_tmp copy.py  runner_offImg_tmp.py  runner_offImg_uv.py  runner_offVid.py  runner_rs.py  runner_sv_usb_ir.py  runner_usb.py  runner_usb_uv.py  singlevision_off_img.py  singlevision_off_img_uv.py  singlevision_off_vid.py  singlevision_rs.py  singlevision_usb_ir.py  singlevision_usb_uv.py  utils.py
src/gui/: __init__.py  addLabel.py  config.py  guiContent.py  guiElements.py  utils.py
src/marker_detector/: __init__.py  arucoDetector.py  arucoMarkerDetector.py
src/parameters/: calibrationBack.yml  calibrationFront.yml  cam1.cset  cam2.cset
